--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "domm": "^0.0.3",
     "frontend": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^7.0.2",
+    "react-scripts": "5.0.1",
+    "router": "^1.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
