--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
+    "@mui/styled-engine-sc": "^6.2.1",
     "cra-template": "1.2.0",
     "domm": "^0.0.3",
     "frontend": "file:",
@@ -10,7 +15,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "styled-components": "^6.1.13"
   },
   "scripts": {
     "start": "react-scripts start",
