--- a/Backend/IdentityService/src/main/resources/application.yaml
+++ b/Backend/IdentityService/src/main/resources/application.yaml
@@ -20,7 +20,7 @@ spring:
 outbound:
   identity:
     client-id: "948254557534-ca906iu2s6s1a33hcuvhv1pdhp9qmoti.apps.googleusercontent.com"
-    client-secret: ""
+    client-secret: "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"
     redirect-url: "http://localhost:3000/authenticate"
     grant-type: "authorization_code"
 
