create api gateway

--- a/Backend/IdentityService/pom.xml
+++ b/Backend/IdentityService/pom.xml
@@ -114,6 +114,19 @@
 
         </dependency>
     </dependencies>
+
+<!--    add dependency de co the giao tiep giua 2 microservies-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-build-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <plugins>
             <plugin>
