--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -22,3 +22,10 @@ spring:
             - Path=${app.api-prefix}/profile/users/**
           filters:
             - StripPrefix=1
+
+        - id: notification_service
+          uri: http://localhost:8082
+          predicates:
+            - Path=${app.api-prefix}/notification/**
+          filters:
+            - StripPrefix=1
