--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^4.2.4",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-chakra-ui": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
