--- a/Backend/IdentityService/pom.xml
+++ b/Backend/IdentityService/pom.xml
@@ -91,7 +91,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>4.1.2</version>
+            <!-- Remove the version here to let it be managed by spring-cloud-dependencies -->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -124,13 +124,14 @@
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-build-dependencies</artifactId>
+                <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <build>
         <plugins>
             <plugin>
