--- a/Backend/profile-service/src/main/resources/application.yaml
+++ b/Backend/profile-service/src/main/resources/application.yaml
@@ -6,5 +6,6 @@ spring:
   neo4j:
     uri: bolt://localhost:7687
     authentication:
-      username: neo4j
-      password: 12345678
+      username: ${DBMS_USERNAME}
+      password: ${DBMS_PASSWORD}
+
