--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@chakra-ui/react": "^2.10.2",
     "@emotion/react": "^11.14.0",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-chakra-ui": "^2.3.1",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "formik": "^2.4.6",
     "next-themes": "^0.4.4",
@@ -17,9 +20,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^4.2.4",
-    "yup": "^1.6.1",
-    "@react-buddy/ide-toolbox": "^2.4.0",
-    "@react-buddy/palette-chakra-ui": "^2.3.1"
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
