config profile service

--- a/Backend/profile-service/src/main/resources/application.yaml
+++ b/Backend/profile-service/src/main/resources/application.yaml
@@ -9,3 +9,6 @@ spring:
       username: ${DBMS_USERNAME}
       password: ${DBMS_PASSWORD}
 
+app:
+  services:
+    identity: "http://localhost:8080/identity"
