--- a/Backend/IdentityService/src/main/resources/application.yaml
+++ b/Backend/IdentityService/src/main/resources/application.yaml
@@ -29,3 +29,6 @@ app:
   services:
     profile: "http://localhost:8081/profile"
     notification: "http://localhost:8082/notification"
+logging:
+  level:
+    root: error
