--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -5,7 +5,6 @@ app:
 spring:
   application:
     name: api-gateway
-
   cloud:
     gateway:
 
@@ -29,3 +28,21 @@ spring:
             - Path=${app.api-prefix}/notification/**
           filters:
             - StripPrefix=1
+        - id: chat_service
+          uri: http://localhost:8083
+          predicates:
+            - Path=${app.api-prefix}/chat/**
+          filters:
+            - StripPrefix=1
+
+
+
+        - id: post_service
+          uri: http://localhost:8084
+          predicates:
+            - Path=${app.api-prefix}/post/**
+          filters:
+            - StripPrefix=1
+logging:
+  level:
+    root: error
