--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -34,12 +34,16 @@ spring:
             - Path=${app.api-prefix}/chat/**
           filters:
             - StripPrefix=1
-
-
-
         - id: post_service
           uri: http://localhost:8084
           predicates:
             - Path=${app.api-prefix}/post/**
+          filters:
+            - StripPrefix=1
+
+        - id: file_service
+          uri: http://localhost:8085
+          predicates:
+            - Path=${app.api-prefix}/file/**
           filters:
             - StripPrefix=1
