--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
