--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
@@ -22,6 +25,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sockjs-client": "^1.6.1",
+    "swiper": "^11.2.5",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
   },
