--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -18,7 +18,8 @@ spring:
         - id: profile_service
           uri: http://localhost:8081
           predicates:
-            - Path=${app.api-prefix}/profile/users/**
+
+            - Path=${app.api-prefix}/profile/**
           filters:
             - StripPrefix=1
 
