--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -9,3 +9,7 @@ spring:
   data:
     mongodb:
       uri: mongodb://root:root@localhost:27017/chat-service?authSource=admin
+app:
+  service:
+    profile:
+      url: "http://localhost:8081/profile"
