--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -48,3 +48,10 @@ spring:
             - Path=${app.api-prefix}/file/**
           filters:
             - StripPrefix=1
+
+        - id: story_service
+          uri: http://localhost:8086
+          predicates:
+            - Path=${app.api-prefix}/stories/**
+          filters:
+            - StripPrefix=1
