--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -35,6 +35,13 @@ spring:
             - Path=${app.api-prefix}/chat/**
           filters:
             - StripPrefix=1
+        - id: chat_service_websocket
+          uri: lb:ws://chat-service  # Use lb:ws:// for service discovery or ws:// for direct connection
+          predicates:
+            - Path=${app.api-prefix}/chat/ws/**
+          filters:
+            - StripPrefix=2  # Strip /api/chat from the path
+
         - id: post_service
           uri: http://localhost:8084
           predicates:
