--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -1,13 +1,15 @@
 server:
   port: 8888
+
 app:
   api-prefix: /api
+
 spring:
   application:
     name: api-gateway
+
   cloud:
     gateway:
-
       routes:
         - id: identity_service
           uri: http://localhost:8080
@@ -15,10 +17,10 @@ spring:
             - Path=${app.api-prefix}/identity/**
           filters:
             - StripPrefix=1
+
         - id: profile_service
           uri: http://localhost:8081
           predicates:
-
             - Path=${app.api-prefix}/profile/**
           filters:
             - StripPrefix=1
@@ -29,19 +31,13 @@ spring:
             - Path=${app.api-prefix}/notification/**
           filters:
             - StripPrefix=1
+
         - id: chat_service
-          uri: http://localhost:8083
-          predicates:
-            - Path=${app.api-prefix}/chat/**
-          filters:
-            - StripPrefix=1
-        - id: chat_service_websocket
-          uri: lb:ws://chat-service  # Use lb:ws:// for service discovery or ws:// for direct connection
+          uri: ws://localhost:8083
           predicates:
             - Path=${app.api-prefix}/chat/ws/**
           filters:
-            - StripPrefix=2  # Strip /api/chat from the path
-
+            - RewritePath=/api/chat/ws(?<segment>/?.*), /chat/ws${segment}
         - id: post_service
           uri: http://localhost:8084
           predicates:
@@ -62,3 +58,6 @@ spring:
             - Path=${app.api-prefix}/stories/**
           filters:
             - StripPrefix=1
+      httpclient:
+        websocket:
+          max-frame-payload-length: 65536
