--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "emoji-picker-react": "^4.12.2",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.503.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-datepicker": "^8.2.1",
