--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.2",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
