set online offline with redis and reconfiguration kafka

--- a/Backend/IdentityService/src/main/resources/application.yaml
+++ b/Backend/IdentityService/src/main/resources/application.yaml
@@ -14,6 +14,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
 outbound:
   identity:
     client-id: "948254557534-ca906iu2s6s1a33hcuvhv1pdhp9qmoti.apps.googleusercontent.com"
