--- a/Backend/story-service/src/main/resources/application.yaml
+++ b/Backend/story-service/src/main/resources/application.yaml
@@ -13,3 +13,7 @@ app:
   service:
     profile:
       url: "http://localhost:8081/profile"
+    notification:
+      url: "http://localhost:8082/notification"
+    identity:
+      url: "http://localhost:8080/identity"
