--- a/Backend/notification-service/src/main/resources/application.yaml
+++ b/Backend/notification-service/src/main/resources/application.yaml
@@ -35,5 +35,8 @@ spring:
           auth: true
           starttls:
             enable: true
-
+app:
+  service:
+    profile:
+      url: "http://localhost:8081/profile"
 
