--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -29,15 +29,17 @@ spring:
           uri: http://localhost:8082
           predicates:
             - Path=${app.api-prefix}/notification/**
+
           filters:
             - StripPrefix=1
+            - RewritePath=/api/notification(?<segment>/?.*), /ws${segment}
 
         - id: chat_service
           uri: ws://localhost:8083
           predicates:
             - Path=${app.api-prefix}/chat/ws/**
           filters:
-            - RewritePath=/api/chat/ws(?<segment>/?.*), /chat/ws${segment}
+            - RewritePath=/api/chat/(?<segment>/?.*), /chat/ws${segment}
         - id: post_service
           uri: http://localhost:8084
           predicates:
