--- a/Backend/profile-service/src/main/resources/application.yaml
+++ b/Backend/profile-service/src/main/resources/application.yaml
@@ -4,12 +4,12 @@ server:
     context-path: /profile
 spring:
   neo4j:
-    uri: bolt://localhost:7687
+    uri: bolt://host.docker.internal:7687
     authentication:
       username: "neo4j"
       password: "12345678"
 
 app:
   services:
-    identity: "http://localhost:8080/identity"
-    notification: "http://localhost:8082/notification"
+    identity: "http://identity-service:8080/identity"
+    notification: "http://notification-service:8082/notification"
