--- a/Backend/IdentityService/src/main/resources/application.yaml
+++ b/Backend/IdentityService/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
     context-path: /identity
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/Identity_service"
+    url: "jdbc:mysql://host.docker.internal:3306/Identity_service"
     username: "root"
     password: "root"
   jpa:
@@ -15,7 +15,7 @@ spring:
       ddl-auto: update
   data:
     redis:
-      host: localhost
+      host: host.docker.internal
       port: 6379
 outbound:
   identity:
@@ -30,5 +30,5 @@ jwt:
   refreshable-duration: 360000 #second
 app:
   services:
-    profile: "http://localhost:8081/profile"
-    notification: "http://localhost:8082/notification"
+    profile: "http://profile-service:8081/profile"
+    notification: "http://notification-service:8082/notification"
