--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -12,21 +12,21 @@ spring:
     gateway:
       routes:
         - id: identity_service
-          uri: http://localhost:8080
+          uri: http://identity-service:8080
           predicates:
             - Path=${app.api-prefix}/identity/**
           filters:
             - StripPrefix=1
 
         - id: profile_service
-          uri: http://localhost:8081
+          uri: http://profile-service:8081
           predicates:
             - Path=${app.api-prefix}/profile/**
           filters:
             - StripPrefix=1
 
         - id: notification_service
-          uri: http://localhost:8082
+          uri: http://notification-service:8082
           predicates:
             - Path=${app.api-prefix}/notification/**
 
@@ -35,13 +35,13 @@ spring:
             - RewritePath=/api/notification(?<segment>/?.*), /ws${segment}
 
         - id: chat_service
-          uri: ws://localhost:8083
+          uri: ws://chat-service:8083
           predicates:
             - Path=${app.api-prefix}/chat/ws/**
           filters:
             - RewritePath=/api/chat/(?<segment>/?.*), /chat/ws${segment}
         - id: post_service
-          uri: http://localhost:8084
+          uri: http://post-service:8084
           predicates:
             - Path=${app.api-prefix}/post/**
           filters:
