--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -5,11 +5,11 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb://root:root@localhost:27017/chat-service?authSource=admin
+      uri: mongodb://root:root@host.docker.internal:27017/chat-service?authSource=admin
   websocket:
     # Enable WebSocket support
     enabled: true
 app:
   service:
     profile:
-      url: "http://localhost:8081/profile"
+      url: "http://profile-service:8081/profile"
