--- a/Backend/notification-service/src/main/resources/application.yaml
+++ b/Backend/notification-service/src/main/resources/application.yaml
@@ -2,6 +2,7 @@ server:
   port: 8082
   servlet:
     context-path: /notification
+  address: 0.0.0.0
 spring:
   application:
     name: notification-service
