--- a/Backend/IdentityService/src/main/resources/application.yaml
+++ b/Backend/IdentityService/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ server:
   address: 0.0.0.0
 spring:
   datasource:
-    url: "jdbc:mysql://host.docker.internal:3306/Identity_service"
+    url: "jdbc:mysql://localhost:3306/Identity_service"
     username: "root"
     password: "root"
   jpa:
@@ -14,9 +14,11 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: update
+
+
   data:
     redis:
-      host: host.docker.internal
+      host: localhost
       port: 6379
   application:
     name: identity-service
@@ -33,5 +35,5 @@ jwt:
   refreshable-duration: 360000 #second
 app:
   services:
-    profile: "http://profile-service:8081/profile"
-    notification: "http://notification-service:8082/notification"
+    profile: "http://localhost:8081/profile"
+    notification: "http://localhost:8082/notification"
