--- a/Backend/api-gateway/Dockerfile
+++ b/Backend/api-gateway/Dockerfile
@@ -1,14 +1,19 @@
+# ----------------------------
 # Build stage
+# ----------------------------
 FROM maven:3.9.9-amazoncorretto-21 AS build
 
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
 
-# Clean và package trong cùng một câu lệnh để tránh lỗi cache
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+COPY src ./src
 RUN mvn clean package -DskipTests
 
+# ----------------------------
 # Run stage
+# ----------------------------
 FROM amazoncorretto:21.0.4
 
 WORKDIR /app
