--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -3,23 +3,20 @@ server:
   address: 0.0.0.0
   servlet:
     context-path: /chat
+
 spring:
   application:
     name: chat-service
   data:
     mongodb:
-
-      uri: mongodb://root:root@localhost:27017/chat-service?authSource=admin
+      uri: mongodb://root:root@mongo:27017/chat-service?authSource=admin
       auto-index-creation: true
-
   websocket:
-    # Enable WebSocket support
     enabled: true
+
 app:
   services:
     profile:
-
-      url: http://localhost:8081/profile
-
+      url: http://profile-service:8081/profile
     identity:
-      url: http://localhost:8080/identity
+      url: http://identity-service:8080/identity
