--- a/production/docker-compose.yaml
+++ b/production/docker-compose.yaml
@@ -68,11 +68,13 @@ services:
   # ====================
   api-gateway:
     build:
-      context: ./api-gateway
+      context: ../Backend/api-gateway
       dockerfile: Dockerfile
     container_name: api-gateway
     ports:
       - "8888:8888"
+    expose:
+      - 8888
     depends_on:
       - identity-service
       - profile-service
@@ -83,7 +85,7 @@ services:
 
   identity-service:
     build:
-      context: ./IdentityService
+      context: ../Backend/IdentityService
       dockerfile: Dockerfile
     container_name: identity-service
     ports:
@@ -94,7 +96,7 @@ services:
 
   profile-service:
     build:
-      context: ./profile-service
+      context: ../Backend/profile-service
       dockerfile: Dockerfile
     container_name: profile-service
     ports:
@@ -104,7 +106,7 @@ services:
 
   notification-service:
     build:
-      context: ./notification-service
+      context: ../Backend/notification-service
       dockerfile: Dockerfile
     container_name: notification-service
     ports:
@@ -116,18 +118,19 @@ services:
 
   chat-service:
     build:
-      context: ./chat-service
+      context: ../Backend/chat-service
       dockerfile: Dockerfile
     container_name: chat-service
     ports:
       - "8083:8083"
+      - "8099:8099"
     depends_on:
       - mongo
       - redis
 
   post-service:
     build:
-      context: ./post-service
+      context: ../Backend/post-service
       dockerfile: Dockerfile
     container_name: post-service
     ports:
@@ -137,14 +140,20 @@ services:
 
   story-service:
     build:
-      context: ./story-service
+      context: ../Backend/story-service
       dockerfile: Dockerfile
     container_name: story-service
     ports:
       - "8086:8086"
     depends_on:
       - mongo
-
+  nginx:
+    image: nginx:1.23.3
+    ports:
+      - 80:80
+    volumes:
+      - ../frontend/build:/usr/share/nginx/html
+      - ./default.conf:/etc/nginx/conf.d/default.conf
 # ====================
 # Volumes
 # ====================
@@ -152,3 +161,5 @@ volumes:
   neo4j_data:
   mysql_data:
   mongo_data:
+
+    
