--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
     name: chat-service
   data:
     mongodb:
-      uri: mongodb://root:root@mongo:27017/chat-service?authSource=admin
+      uri: mongodb://root:root@localhost:27017/chat-service?authSource=admin
       auto-index-creation: true
   websocket:
     enabled: true
@@ -17,6 +17,6 @@ spring:
 app:
   services:
     profile:
-      url: http://profile-service:8081/profile
+      url: http://localhost:8081/profile
     identity:
-      url: http://identity-service:8080/identity
+      url: http://localhost:8080/identity
