--- a/Backend/IdentityService/src/main/resources/application.yaml
+++ b/Backend/IdentityService/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://mysql:3306/Identity_service?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/Identity_service?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
     password: root
   jpa:
@@ -17,7 +17,7 @@ spring:
       ddl-auto: update
   data:
     redis:
-      host: redis
+      host: localhost
       port: 6379
   application:
     name: identity-service
@@ -36,5 +36,5 @@ jwt:
 
 app:
   services:
-    profile: "http://profile-service:8081/profile"
-    notification: "http://notification-service:8082/notification"
+    profile: "http://localhost:8081/profile"
+    notification: "http://localhost:8082/notification"
