--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -5,12 +5,12 @@ server:
 app:
   api-prefix: /api
   services:
-    identity: "http://localhost:8080/identity"
-    profile: "http://localhost:8081/profile"
-    notification: "http://localhost:8082/notification"
-    post: "http://localhost:8084/post"
-    story: "http://localhost:8086/stories"
-    chat: "http://localhost:8083/chat"
+    identity: "http://identity-service:8080/identity"
+    profile: "http://profile-service:8081/profile"
+    notification: "http://notification-service:8082/notification"
+    post: "http://post-service:8084/post"
+    story: "http://story-service:8086/stories"
+    chat: "http://chat-service:8083/chat"
 
 spring:
   application:
@@ -19,42 +19,42 @@ spring:
     gateway:
       routes:
         - id: identity_service
-          uri: http://localhost:8080
+          uri: http://identity-service:8080
           predicates:
             - Path=${app.api-prefix}/identity/**
           filters:
             - StripPrefix=1
 
         - id: profile_service
-          uri: http://localhost:8081
+          uri: http://profile-service:8081
           predicates:
             - Path=${app.api-prefix}/profile/**
           filters:
             - StripPrefix=1
 
         - id: notification_service
-          uri: http://localhost:8082
+          uri: http://notification-service:8082
           predicates:
             - Path=${app.api-prefix}/notification/**
           filters:
             - StripPrefix=1
 
         - id: chat_service
-          uri: http://localhost:8083
+          uri: http://chat-service:8083
           predicates:
             - Path=${app.api-prefix}/chat/**
           filters:
             - StripPrefix=1
 
         - id: post_service
-          uri: http://localhost:8084
+          uri: http://post-service:8084
           predicates:
             - Path=${app.api-prefix}/post/**
           filters:
             - StripPrefix=1
 
         - id: story_service
-          uri: http://localhost:8086
+          uri: http://story-service:8086
           predicates:
             - Path=${app.api-prefix}/stories/**
           filters:
