--- a/Backend/notification-service/src/main/resources/application.yaml
+++ b/Backend/notification-service/src/main/resources/application.yaml
@@ -9,12 +9,12 @@ spring:
     name: notification-service
   data:
     mongodb:
-      uri: mongodb://root:root@localhost:27017/notification-service?authSource=admin
+      uri: mongodb://root:root@mongo:27017/notification-service?authSource=admin
     redis:
-      host: localhost
+      host: redis
       port: 6379
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: kafka:9092
     consumer:
       group-id: notification-service
       auto-offset-reset: earliest
@@ -38,4 +38,4 @@ spring:
 app:
   service:
     profile:
-      url: "http://localhost:8081/profile"
+      url: "http://profile-service:8081/profile"
