--- a/Backend/profile-service/src/main/resources/application.yaml
+++ b/Backend/profile-service/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ server:
 
 spring:
   neo4j:
-    uri: bolt://localhost:7687
+    uri: bolt://neo4j:7687
     authentication:
       username: "neo4j"
       password: "12345678"
@@ -15,5 +15,5 @@ spring:
 
 app:
   services:
-    identity: "http://localhost:8080/identity"
-    notification: "http://localhost:8082/notification"
+    identity: "http://identity-service:8080/identity"
+    notification: "http://notification-service:8082/notification"
