--- a/Backend/notification-service/src/main/resources/application.yaml
+++ b/Backend/notification-service/src/main/resources/application.yaml
@@ -3,6 +3,9 @@ server:
   servlet:
     context-path: /notification
   address: 0.0.0.0
+logging:
+  level:
+    com.blur.notificationservice: DEBUG
 
 spring:
   application:
