--- a/Backend/post-service/src/main/resources/application.yaml
+++ b/Backend/post-service/src/main/resources/application.yaml
@@ -10,7 +10,19 @@ spring:
   data:
     mongodb:
       uri: mongodb://root:root@localhost:27017/post-service?authSource=admin
-
+    redis:
+      host: localhost
+      port: 6379
+      # Sử dụng database khác với Identity Service
+      database: 1
+      timeout: 2000ms
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 2
+      cache:
+        type: redis
 app:
   service:
     profile:
