phone call done 70%

--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -17,6 +17,15 @@ spring:
     mongodb:
       uri: mongodb://root:root@localhost:27017/chat-service?authSource=admin
       auto-index-creation: true
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 2000ms
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 0
   websocket:
     enabled: true
 
@@ -26,3 +35,6 @@ app:
       url: http://localhost:8081/profile
     identity:
       url: http://localhost:8080/identity
+  call:
+    ring-timeout: 60 #seconds
+    max-duration: 3600
