--- a/Backend/chat-service/pom.xml
+++ b/Backend/chat-service/pom.xml
@@ -95,6 +95,14 @@
             <artifactId>netty-socketio</artifactId>
             <version>2.0.13</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!-- MapStruct Processor -->
         <dependency>
             <groupId>org.mapstruct</groupId>
