--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -26,6 +26,14 @@ spring:
           max-active: 8
           max-idle: 8
           min-idle: 0
+  cache:
+    type: redis
+    redis:
+      time-to-live: 300000
+      cache-null-values: false
+      use-key-prefix: true
+      key-prefix: "chat-service"
+      enable-statistics: true
   websocket:
     enabled: true
 
