--- a/Backend/ai-service/.gitignore
+++ b/Backend/ai-service/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -12,15 +12,12 @@ target/
 .settings
 .springBeans
 .sts4-cache
-*.yaml
-*.yml
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
-.env
 
 ### NetBeans ###
 /nbproject/private/
