--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -5,12 +5,12 @@ server:
 app:
   api-prefix: /api
   services:
-    identity: "http://localhost:8080/identity"
-    profile: "http://localhost:8081/profile"
-    notification: "http://localhost:8082/notification"
-    post: "http://localhost:8084/post"
-    story: "http://localhost:8086/stories"
-    chat: "http://localhost:8083/chat"
+    identity: "${IDENTITY_SERVICE_URL:http://localhost:8080/identity}"
+    profile: "${PROFILE_SERVICE_URL:http://localhost:8081/profile}"
+    notification: "${NOTIFICATION_SERVICE_URL:http://localhost:8082/notification}"
+    post: "${POST_SERVICE_URL:http://localhost:8084/post}"
+    story: "${STORY_SERVICE_URL:http://localhost:8086/stories}"
+    chat: "${CHAT_SERVICE_URL:http://localhost:8083/chat}"
 
 spring:
   application:
@@ -24,7 +24,7 @@ spring:
         corsConfigurations:
           '[/**]':
             allowedOrigins:
-              - "http://localhost:3000"
+              - "${CORS_ALLOWED_ORIGIN:http://localhost:3000}"
             allowedMethods:
               - "GET"
               - "POST"
@@ -36,43 +36,52 @@ spring:
             allowCredentials: true
       routes:
         - id: identity_service
-          uri: http://localhost:8080
+          uri: ${IDENTITY_SERVICE_URL:http://localhost:8080}
           predicates:
             - Path=${app.api-prefix}/identity/**
           filters:
             - StripPrefix=1
 
         - id: profile_service
-          uri: http://localhost:8081
+          uri: ${PROFILE_SERVICE_URL:http://localhost:8081}
           predicates:
             - Path=${app.api-prefix}/profile/**
           filters:
             - StripPrefix=1
 
         - id: notification_service
-          uri: http://localhost:8082
+          uri: ${NOTIFICATION_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=${app.api-prefix}/notification/**
           filters:
             - StripPrefix=1
 
         - id: chat_service
-          uri: http://localhost:8083
+          uri: ${CHAT_SERVICE_URL:http://localhost:8083}
           predicates:
             - Path=${app.api-prefix}/chat/**
           filters:
             - StripPrefix=1
 
         - id: post_service
-          uri: http://localhost:8084
+          uri: ${POST_SERVICE_URL:http://localhost:8084}
           predicates:
             - Path=${app.api-prefix}/post/**
           filters:
             - StripPrefix=1
 
         - id: story_service
-          uri: http://localhost:8086
+          uri: ${STORY_SERVICE_URL:http://localhost:8086}
           predicates:
             - Path=${app.api-prefix}/stories/**
           filters:
             - StripPrefix=1
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,gateway
+  endpoint:
+    health:
+      show-details: always
