--- a/Backend/chat-service/src/main/resources/application.yaml
+++ b/Backend/chat-service/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ server:
 spring:
   application:
     name: chat-service
+
   servlet:
     multipart:
       enabled: true
@@ -15,10 +16,11 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb://root:root@localhost:27017/chat-service?authSource=admin
+      uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/chat-service?authSource=admin}
       auto-index-creation: true
+
     redis:
-      host: localhost
+      host: ${REDIS_HOST:localhost}
       port: 6379
       timeout: 2000ms
       lettuce:
@@ -26,23 +28,34 @@ spring:
           max-active: 8
           max-idle: 8
           min-idle: 0
+
   cache:
     type: redis
     redis:
       time-to-live: 300000
       cache-null-values: false
       use-key-prefix: true
-      key-prefix: "chat-service"
+      key-prefix: chat-service
       enable-statistics: true
+
   websocket:
     enabled: true
 
 app:
   services:
     profile:
-      url: http://localhost:8081/profile
+      url: ${PROFILE_SERVICE_URL:http://localhost:8081/profile}
     identity:
-      url: http://localhost:8080/identity
+      url: ${IDENTITY_SERVICE_URL:http://localhost:8080/identity}
   call:
-    ring-timeout: 60 #seconds
+    ring-timeout: 60
     max-duration: 3600
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
