--- a/Backend/notification-service/src/main/resources/application.yaml
+++ b/Backend/notification-service/src/main/resources/application.yaml
@@ -1,23 +1,23 @@
 server:
   port: 8082
+  address: 0.0.0.0
   servlet:
     context-path: /notification
-  address: 0.0.0.0
-logging:
-  level:
-    com.blur.notificationservice: DEBUG
 
 spring:
   application:
     name: notification-service
+
   data:
     mongodb:
-      uri: mongodb://root:root@localhost:27017/notification-service?authSource=admin
+      uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/notification-service?authSource=admin}
+
     redis:
-      host: localhost
+      host: ${REDIS_HOST:localhost}
       port: 6379
+
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     consumer:
       group-id: notification-service
       auto-offset-reset: earliest
@@ -26,23 +26,39 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
   mail:
     host: smtp.gmail.com
     port: 587
     username: blur.socialnetwork@gmail.com
-    password: "andb wbaq ndls fadn"
+    password: andb wbaq ndls fadn
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
+
   jackson:
     serialization:
       write-dates-as-timestamps: false
     deserialization:
       fail-on-unknown-properties: false
+
 app:
   service:
     profile:
-      url: "http://localhost:8081/profile"
+      url: ${PROFILE_SERVICE_URL:http://localhost:8081/profile}
+
+logging:
+  level:
+    com.blur.notificationservice: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
