--- a/Backend/post-service/src/main/resources/application.yaml
+++ b/Backend/post-service/src/main/resources/application.yaml
@@ -1,19 +1,20 @@
 server:
   port: 8084
+  address: 0.0.0.0
   servlet:
     context-path: /post
-  address: 0.0.0.0
 
 spring:
   application:
     name: post-service
+
   data:
     mongodb:
-      uri: mongodb://root:root@localhost:27017/post-service?authSource=admin
+      uri: ${MONGODB_URI:mongodb://root:root@localhost:27017/post-service?authSource=admin}
+
     redis:
-      host: localhost
+      host: ${REDIS_HOST:localhost}
       port: 6379
-      # Sử dụng database khác với Identity Service
       database: 1
       timeout: 2000ms
       lettuce:
@@ -21,21 +22,30 @@ spring:
           max-active: 8
           max-idle: 8
           min-idle: 2
-      cache:
-        type: redis
-        redis:
-          time-to-live: 300000
-          cache-null-values: false
-          use-key-prefix: true
-          key-prefix: "post-service:"
-          enable-statistics: true
+
+  cache:
+    type: redis
+    redis:
+      time-to-live: 300000
+      cache-null-values: false
+      use-key-prefix: true
+      key-prefix: "post-service:"
+      enable-statistics: true
 
 app:
   service:
     profile:
-      url: "http://localhost:8081/profile"
+      url: ${PROFILE_SERVICE_URL:http://localhost:8081/profile}
     notification:
-      url: "http://localhost:8082/notification"
+      url: ${NOTIFICATION_SERVICE_URL:http://localhost:8082/notification}
     identity:
-      url: "http://localhost:8080/identity"
+      url: ${IDENTITY_SERVICE_URL:http://localhost:8080/identity}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
