--- a/Backend/profile-service/src/main/resources/application.yaml
+++ b/Backend/profile-service/src/main/resources/application.yaml
@@ -5,28 +5,40 @@ server:
     context-path: /profile
 
 spring:
-  neo4j:
-    uri: bolt://localhost:7687
-    authentication:
-      username: "neo4j"
-      password: "12345678"
-  redis:
-    host: localhost
-    port: 6379
-    # Database riêng cho Profile Service
-    database: 2
-    timeout: 2000ms
-    lettuce:
-      pool:
-        max-active: 8
-        max-idle: 8
-        min-idle: 2
-    cache:
-      type: redis
   application:
     name: profile-service
 
+  neo4j:
+    uri: ${NEO4J_URI:bolt://localhost:7687}
+    authentication:
+      username: neo4j
+      password: ${NEO4J_PASSWORD:12345678}
+
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: 6379
+      database: 2
+      timeout: 2000ms
+      lettuce:
+        pool:
+          max-active: 8
+          max-idle: 8
+          min-idle: 2
+
+  cache:
+    type: redis
+
 app:
   services:
-    identity: "http://localhost:8080/identity"
-    notification: "http://localhost:8082/notification"
+    identity: ${IDENTITY_SERVICE_URL:http://localhost:8080/identity}
+    notification: ${NOTIFICATION_SERVICE_URL:http://localhost:8082/notification}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
