--- a/Backend/notification-service/src/main/resources/application.yaml
+++ b/Backend/notification-service/src/main/resources/application.yaml
@@ -57,6 +57,11 @@ logging:
 management:
   endpoints:
     web:
+      cors:
+        allowed-origins: http://localhost:3000
+        allowed-methods: GET,POST,PUT,DELETE,OPTIONS
+        allowed-headers: "*"
+        allow-credentials: true
       exposure:
         include: health,info
   endpoint:
